--- a/_config.yml
+++ b/_config.yml
@@ -9,4 +9,4 @@ description: I know nothing...
 markdown: kramdown
 #remote_theme: pmarsceill/just-the-docs
 
-theme: jekyll-theme-slate
+theme: jekyll-theme-hacker
