--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: Akira
 
 # Short description of your site
-description: I know nothing...
+description: Ko No Dio Da !!! 
 
 markdown: kramdown
 #remote_theme: pmarsceill/just-the-docs
